--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,17 @@
 @import "reset.css";
 
 $box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+$text-color: rgba(0, 0, 0, 0.7);
 
 body {
+  width: auto;
+  height: 100%;
   background-color: #f6f9fc;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0;
+  margin: 25px;
   user-select: none;
 }
 
@@ -21,13 +24,31 @@ body {
 }
 
 .controls {
-  margin-top: 80px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   .controls-range {
     margin-bottom: 30px;
+
+    label {
+      display: flex;
+      margin: 5px 0;
+      justify-content: center;
+      font-size: 10px;
+      font-weight: 600;
+      text-transform: uppercase;
+      color: $text-color;
+    }
+
+    input {
+      cursor: grab;
+
+      &:active {
+        cursor: grabbing;
+      }
+    }
   }
 
   .controls-buttons {
@@ -42,7 +63,7 @@ body {
       font-weight: 700;
       font-size: 12px;
       text-transform: uppercase;
-      color: rgba(0, 0, 0, 0.7);
+      color: $text-color;
       border: 2px solid rgba(0, 0, 0, 0.2);
       border-radius: 5px;
       box-shadow: $box-shadow;
@@ -60,9 +81,14 @@ body {
     .controls-colors {
       width: 50px;
       height: 50px;
-      margin: 0 2px;
+      margin: 10px 2px;
       border-radius: 50%; // Элемент будет полностью круглым
       box-shadow: $box-shadow;
+      cursor: grab;
+
+      &:active {
+        cursor: grabbing;
+      }
     }
 
     .black {
@@ -101,7 +127,4 @@ body {
       background-color: purple;
     }
   }
-
-
-
 }
