--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ body {
 .controls .controls-colors {
   display: flex;
 }
+.controls .controls-colors .active {
+  border: 3px inset gold;
+}
 .controls .controls-colors .controls-colors {
   width: 50px;
   height: 50px;
