--- a/style.scss
+++ b/style.scss
@@ -78,6 +78,10 @@ body {
   .controls-colors {
     display: flex;
 
+    .active {
+      border: 3px inset gold;
+    }
+
     .controls-colors {
       width: 50px;
       height: 50px;
